# kosac-lexicon

./: .gitignore  2024-01-12.txt  CHANGELOG.md  CLAUDE.md  LICENSE  README.ko.md  README.md  demo-20240204.ipynb  demo-20240206.ipynb  demo-20240223.ipynb  initialization.html  initialization.ipynb  overall.ipynb  pyproject.toml  utils.py
.github/workflows/: docs.yml
data/: example.csv  kosac-corpus-raw.xlsx
docs/: api.md  conf.py  index.md  installation.md  manual.ko.md  manual.md
docs/tutorials/: counting.md  custom-lexicon.md  getting-started.md  machine-learning.md  negation-intensifier.md  nikl-lexicon.md  nsmc-case-study.md  social-science.md
examples/: README.md  nikl_lexicon.py  nsmc_lexicon.py  quickstart.py
examples/legacy/: kosac-lexicon-20240118.ipynb
kosac/: corpora.py  lexicon.py  tokenizers.py  utils.py
src/kosac/: __init__.py  __main__.py  _resources.py  analyzer.py  cli.py  corpora.py  info.py  lexicon.py  sklearn.py  tokenizers.py  utils.py
src/kosac/data/: LICENSE  expressive-type.csv  intensity.csv  nested-order.csv  polarity.csv  readme.txt  subjectivity-polarity.csv  subjectivity-type.csv
tagger/: user_dictionary.txt
tests/: conftest.py  test_analyzer.py  test_build.py  test_cli.py  test_composition.py  test_counting.py  test_filtering.py  test_import.py  test_inference.py  test_info.py  test_kiwi_userdict.py  test_legacy_api.py  test_loaders.py  test_matching.py  test_sklearn.py  test_tokenizer_kiwi.py
