[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kosac-lexicon"
version = "0.2.0"
description = "KOSAC: a morpheme-level Korean sentiment analysis lexicon"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Sumin Park", email = "mam3b@snu.ac.kr" }]
keywords = ["korean", "sentiment-analysis", "nlp", "lexicon", "kosac", "korean-nlp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: Korean",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: Linguistic",
]
dependencies = [
  "pandas>=1.3",
  "numpy>=1.20",
]

[project.optional-dependencies]
kiwi = ["kiwipiepy>=0.15"]
transformers = ["transformers>=4.20"]
sklearn = ["scikit-learn>=1.0"]
docs = ["sphinx>=7", "myst-parser>=2", "furo"]
all = ["kosac-lexicon[kiwi,transformers,sklearn]"]
dev = ["pytest>=7", "build", "twine", "kiwipiepy>=0.15", "scikit-learn>=1.0", "sphinx>=7", "myst-parser>=2", "furo"]

[project.scripts]
kosac = "kosac.cli:main"

[project.urls]
Homepage = "https://github.com/suparklingmin/kosac-lexicon"
Documentation = "https://suminpark.kr/kosac-lexicon/"
Repository = "https://github.com/suparklingmin/kosac-lexicon"
Issues = "https://github.com/suparklingmin/kosac-lexicon/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/kosac"]

[tool.hatch.build.targets.sdist]
include = [
  "src/kosac",
  "tests",
  "README.md",
  "README.ko.md",
  "CHANGELOG.md",
  "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
